# keymap_optimization

./: .gitignore  Cargo.toml  README.md
chord_preferences/gather_chord_preferences/: Cargo.toml
chord_preferences/gather_chord_preferences/src/: gather_chords.rs  keyboard_config.rs  keyboard_config_twiddler.rs  lib.rs  main.rs
keymap_optimization/: Cargo.toml  README.md
keymap_optimization/src/: lib.rs  local_env.rs  main.rs
keymap_optimization/src/chord_preferences/: data_collection_keymap_gen.rs  gather_chords.rs  logic.rs  mod.rs
keymap_optimization/src/keyboard_config/: keyboard_config_src.rs
keymap_optimization/src/keyboard_config_implementations/: mod.rs  twiddler.rs
keymap_optimization/src/tests/: tests.rs
keymap_optimization_ml/: Cargo.toml
keymap_optimization_ml/src/: chord_samplers.rs  lib.rs  possible_chord_sampler.rs  reward_model.rs  train.rs
keymap_optimization_ml/src/tests/: tests.rs
keymap_optimization_ml/src/tests/test_data/: chord_preferences_results_1725752580.json  chord_preferences_results_1725768763.json
src/: lib.rs  local_env.rs  main.rs
src/chord_preferences/: data_collection_keymap_gen.rs  logic.rs  mod.rs
src/keyboard_config/: keyboard_config_src.rs  mod.rs
src/keyboard_config_implementations/: twiddler.rs
src/tests/: tests.rs
