[package]
name = "keymap_optimization"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = "0.26"
strum_macros = "0.26"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] } 
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde_arrays = "0.1"
serde-big-array = "0.5.1"
twidlk_rust = { git = "https://github.com/evgunter/twidlk_rust" }
queues = "1.0.2"

[dev-dependencies]
paste = "1.0"
