[package]
name = "keymap_optimization_ml"
version = "0.1.0"
edition = "2021"

[dependencies]
tch = "0.17"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] } 
serde_json = { version = "1.0", features = ["float_roundtrip"] }
strum = "0.26"
strum_macros = "0.26"
itertools = "0.13"
keymap_optimization = { path = "../keymap_optimization" }
